FIX Notifications not showing up on the homepage.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -61,3 +61,11 @@ a {
 #gridCheck {
 	width: auto;
 }
+
+#notification {
+	position: fixed;
+	bottom: 0.2rem;
+	right: 0;
+	left: 0;
+	z-index: 1000;
+}
